Sun Mar 24 13:42:24 2013  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (GC_ENABLE_LAZY_SWEEP): new macro to switch lazy sweeping
	  for debugging. [Feature #8024] [ruby-dev:47135]

Sun Mar 24 12:55:47 2013  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: We have no chance to expand the heap when lazy sweeping is
	  restricted. So collecting is often invoked if there is not
	  enough free space in the heap. Try to expand heap when this is
	  the case.

Sun Mar 24 11:03:31 2013  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_require.rb: Remove temporally files in the tests.

	* test/ruby/test_rubyoptions.rb: Ditto.

	* test/logger/test_logger.rb: Ditto.

	* test/psych/test_psych.rb: Ditto.

	* test/readline/test_readline.rb: Ditto.

	* test/syslog/test_syslog_logger.rb: Ditto.

	* test/webrick/test_httpauth.rb: Ditto.

	* test/zlib/test_zlib.rb: Ditto.

Sun Mar 24 05:36:29 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb:  Added documentation for multicast support.

	* NEWS:  Point to above documentation.

Sun Mar 24 05:32:39 2013  Eric Hodel  <drbrain@segment7.net>

	* test/rinda/test_rinda.rb:  Restore tests commented out while fixing
	  test slowdown bug before r39895.

Sun Mar 24 05:03:36 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb:  Add multicast support to Rinda::RingFinger and
	  Rinda::RingServer.  [ruby-trunk - Bug #8073]
	* test/rinda/test_rinda.rb:  Test for the above.

	* NEWS: Update with Rinda multicast support

Sun Mar 24 04:13:27 2013  Eric Hodel  <drbrain@segment7.net>

	* test/rinda/test_rinda.rb:  Fixed test failures in r39890 and r39890
	  due to stopping DRb service.

Sun Mar 24 03:34:02 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/rinda.rb:  Fixed loss of tuple when remote is alive but the
	  call stack was unwound.  Patch by Joel VanderWerf.
	  [ruby-trunk - Bug #8125]
	* test/rinda/test_rinda.rb:  Test for the above.

Sun Mar 24 02:14:53 2013  Tanaka Akira  <akr@fsij.org>
